package Interface;

public interface CRUD {
    void Save();
    void Update();
    void All();
    void FindById();
    void Delete();
}
